# ingesoft-2

./: .gitignore  README.md
.claude/: settings.json
Workshop-2/: bpmn-diagram  crc-un-sillicon-valley
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: database.py  main.py  models.py
backend/src/api/: dependencies.py  health.py  router.py
backend/src/core/: config.py
backend/src/infrastructure/db/: database.py  models.py
backend/src/infrastructure/storage/: gcs.py
backend/src/modules/auth/: crud.py  router.py  schemas.py
backend/src/modules/auth/services/: cookies.py  email.py  password.py  rate_limit.py  tokens.py
backend/src/modules/comments/: crud.py  router.py  schemas.py
backend/src/modules/entries/: categories.py  crud.py  router.py  schemas.py
backend/src/modules/projects/: crud.py  router.py  schemas.py
backend/src/modules/reactions/: crud.py  router.py  schemas.py
backend/src/modules/search/: crud.py  router.py
backend/src/modules/users/: crud.py  router.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_categories_tags.py  test_comments.py  test_entries.py  test_featured.py  test_health.py  test_projects.py  test_reactions.py  test_search.py  test_users.py
frontend/un-sillicon-valley/: .gitignore  DESIGN.md  README.md  biome.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/un-sillicon-valley/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/un-sillicon-valley/lib/: api.ts
(+57 files in other folders)
